--- a/package.json
+++ b/package.json
@@ -6,23 +6,32 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "8.0.7",
-    "remark-gfm": "3.0.1",
-    "remark-math": "5.1.1",
+    "react-syntax-highlighter": "^16.1.0",
     "rehype-katex": "6.0.3",
     "rehype-raw": "7.0.0",
-    "react-syntax-highlighter": "^16.1.0"
+    "remark-gfm": "3.0.1",
+    "remark-math": "5.1.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.14.0",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vitest": "^4.0.16"
   }
 }
